--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,3 +1,8 @@
 <div class="col-md-2 student-invisible img-circle" (click)="onStudentClick()">
-  <img *ngIf="showImage" [src]="'../assets/students/'+studentIndex+'.jpg'" alt="studentImage" class="img-circle">
+  <img
+    *ngIf="showImage"
+    [src]="'../assets/students/' + studentIndex + '.jpg'"
+    alt="studentImage"
+    class="img-circle student-img"
+  />
 </div>
