--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,3 +12,11 @@
   margin-top: 80px;
   height: 250px;
 }
+.winner {
+  position: fixed;
+  top: 210px;
+  left: 180px;
+  z-index: 1;
+  opacity: 0.9;
+  border-radius: 10px;
+}
